@@ -1,3 +1,4 @@
+* support for parsing Rigaku RAS files (Smartlab Guidance)
 * new getDetectorPos/Distance routines in QConversion
   This can be used for all types of detectors to determine their position and
   distance for data normalization purposes
